--- a/archives/toutiao-search/2023-12-19.md
+++ b/archives/toutiao-search/2023-12-19.md
@@ -1,56 +1,77 @@
 # 2023-12-19
 
-共 355 条
+共 372 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Dec 19 2023 19:00:44 GMT+0800 (China Standard Time) -->
-1. [地震已造成甘肃113人死亡](https://so.toutiao.com/search?keyword=地震已造成甘肃113人死亡)
+<!-- 最后更新时间 Tue Dec 19 2023 20:09:00 GMT+0800 (China Standard Time) -->
+1. [甘肃地震已致127人遇难](https://so.toutiao.com/search?keyword=甘肃地震已致127人遇难)
 1. [甘肃6.2级地震瞬间：砖块如雨落下](https://so.toutiao.com/search?keyword=甘肃6.2级地震瞬间：砖块如雨落下)
 1. [从这些数字看拼搏向前的中国](https://so.toutiao.com/search?keyword=从这些数字看拼搏向前的中国)
 1. [韩红等多位明星为甘肃地震捐款捐物](https://so.toutiao.com/search?keyword=韩红等多位明星为甘肃地震捐款捐物)
 1. [甘肃6.2级地震为何破坏力这么大](https://so.toutiao.com/search?keyword=甘肃6.2级地震为何破坏力这么大)
-1. [空军运-20抵达甘肃](https://so.toutiao.com/search?keyword=空军运-20抵达甘肃)
+1. [中方回应菲总统称菲中关系走错方向](https://so.toutiao.com/search?keyword=中方回应菲总统称菲中关系走错方向)
 1. [24小时直击甘肃地震救援现场](https://so.toutiao.com/search?keyword=24小时直击甘肃地震救援现场)
 1. [法学泰斗江平逝世](https://so.toutiao.com/search?keyword=法学泰斗江平逝世)
 1. [合肥地铁系统瘫痪？男子造谣被拘](https://so.toutiao.com/search?keyword=合肥地铁系统瘫痪？男子造谣被拘)
 1. [鸟群盘旋是地震前兆？多地曾辟谣](https://so.toutiao.com/search?keyword=鸟群盘旋是地震前兆？多地曾辟谣)
-1. [甘肃地震亲历者：彻夜屋外烤火避险](https://so.toutiao.com/search?keyword=甘肃地震亲历者：彻夜屋外烤火避险)
-1. [地震时宿舍大门紧闭 学生砸门逃生](https://so.toutiao.com/search?keyword=地震时宿舍大门紧闭+学生砸门逃生)
-1. [飞贼国资委大楼窃名烟 一半是假的](https://so.toutiao.com/search?keyword=飞贼国资委大楼窃名烟+一半是假的)
 1. [航拍积石山震中村庄](https://so.toutiao.com/search?keyword=航拍积石山震中村庄)
-1. [军营大厨手把手教你萝卜炖羊肉](https://so.toutiao.com/search?keyword=军营大厨手把手教你萝卜炖羊肉)
-1. [上海警方通报女子言语滋扰执勤武警](https://so.toutiao.com/search?keyword=上海警方通报女子言语滋扰执勤武警)
-1. [旺旺集团宣布向甘肃地震灾区捐款](https://so.toutiao.com/search?keyword=旺旺集团宣布向甘肃地震灾区捐款)
-1. [“70后”女县委书记当选副省长](https://so.toutiao.com/search?keyword=“70后”女县委书记当选副省长)
-1. [军媒评女子骚扰哨兵：哨兵不可侵犯](https://so.toutiao.com/search?keyword=军媒评女子骚扰哨兵：哨兵不可侵犯)
-1. [积石山县委办回应办公楼地震遭损坏](https://so.toutiao.com/search?keyword=积石山县委办回应办公楼地震遭损坏)
-1. [演员于洋家中存放大量金砖](https://so.toutiao.com/search?keyword=演员于洋家中存放大量金砖)
+1. [地震时宿舍大门紧闭 学生砸门逃生](https://so.toutiao.com/search?keyword=地震时宿舍大门紧闭+学生砸门逃生)
 1. [新疆克州阿图什市发生5.5级地震](https://so.toutiao.com/search?keyword=新疆克州阿图什市发生5.5级地震)
-1. [高校回应宿舍地震时门打不开](https://so.toutiao.com/search?keyword=高校回应宿舍地震时门打不开)
+1. [解清帅直播助力寻子家长](https://so.toutiao.com/search?keyword=解清帅直播助力寻子家长)
+1. [旺旺集团宣布向甘肃地震灾区捐款](https://so.toutiao.com/search?keyword=旺旺集团宣布向甘肃地震灾区捐款)
+1. [演员于洋家中存放大量金砖](https://so.toutiao.com/search?keyword=演员于洋家中存放大量金砖)
+1. [男子报警称自己的直升飞机仪表被偷](https://so.toutiao.com/search?keyword=男子报警称自己的直升飞机仪表被偷)
+1. [甘肃地震亲历者：彻夜屋外烤火避险](https://so.toutiao.com/search?keyword=甘肃地震亲历者：彻夜屋外烤火避险)
+1. [上海警方通报女子言语滋扰执勤武警](https://so.toutiao.com/search?keyword=上海警方通报女子言语滋扰执勤武警)
+1. [地震灾区救援的暖心瞬间](https://so.toutiao.com/search?keyword=地震灾区救援的暖心瞬间)
+1. [地震瞬间烤肉店主大喊客人成功避险](https://so.toutiao.com/search?keyword=地震瞬间烤肉店主大喊客人成功避险)
+1. [疯狂小杨哥向甘肃灾区捐款](https://so.toutiao.com/search?keyword=疯狂小杨哥向甘肃灾区捐款)
+1. [广西一河面疑现溺亡儿童 警方介入](https://so.toutiao.com/search?keyword=广西一河面疑现溺亡儿童+警方介入)
+1. [用户称地震时7部苹果手机均无预警](https://so.toutiao.com/search?keyword=用户称地震时7部苹果手机均无预警)
+1. [王诗龄回京过圣诞 吃400元3个包子](https://so.toutiao.com/search?keyword=王诗龄回京过圣诞+吃400元3个包子)
+1. [男子摔下月台喊救命 火车及时停下](https://so.toutiao.com/search?keyword=男子摔下月台喊救命+火车及时停下)
+1. [甘肃：参与救援的队伍请尽快报备](https://so.toutiao.com/search?keyword=甘肃：参与救援的队伍请尽快报备)
+1. [中国地震带分布图](https://so.toutiao.com/search?keyword=中国地震带分布图)
+1. [国内油价将迎来6连降](https://so.toutiao.com/search?keyword=国内油价将迎来6连降)
+1. [鸿星尔克向甘肃捐赠2000万物资](https://so.toutiao.com/search?keyword=鸿星尔克向甘肃捐赠2000万物资)
+1. [美宣布3亿美元对台军售 国防部回应](https://so.toutiao.com/search?keyword=美宣布3亿美元对台军售+国防部回应)
+1. [飞贼国资委大楼窃名烟 一半是假的](https://so.toutiao.com/search?keyword=飞贼国资委大楼窃名烟+一半是假的)
+1. [新东方捐款1000万援助甘肃](https://so.toutiao.com/search?keyword=新东方捐款1000万援助甘肃)
+1. [军媒评女子骚扰哨兵：哨兵不可侵犯](https://so.toutiao.com/search?keyword=军媒评女子骚扰哨兵：哨兵不可侵犯)
+1. [朱丹“被骗”事件始末](https://so.toutiao.com/search?keyword=朱丹“被骗”事件始末)
+1. [酥饼店连夜做5000个饼支援震区](https://so.toutiao.com/search?keyword=酥饼店连夜做5000个饼支援震区)
+1. [哈尔滨冰雪大世界致歉：连夜整改](https://so.toutiao.com/search?keyword=哈尔滨冰雪大世界致歉：连夜整改)
+1. [快递公司回应物资运输受地震影响](https://so.toutiao.com/search?keyword=快递公司回应物资运输受地震影响)
+1. [网红倪海杉甘肃地震捐款100万](https://so.toutiao.com/search?keyword=网红倪海杉甘肃地震捐款100万)
+1. [俄总理抵达北京 中国副外长接机](https://so.toutiao.com/search?keyword=俄总理抵达北京+中国副外长接机)
 1. [张雪峰：这个天骑电动车确实有点冷](https://so.toutiao.com/search?keyword=张雪峰：这个天骑电动车确实有点冷)
+1. [苹果CEO库克宣布将捐款驰援甘肃](https://so.toutiao.com/search?keyword=苹果CEO库克宣布将捐款驰援甘肃)
+1. [军营大厨手把手教你萝卜炖羊肉](https://so.toutiao.com/search?keyword=军营大厨手把手教你萝卜炖羊肉)
+1. [俄士兵阵亡前留在墙上的遗言曝光](https://so.toutiao.com/search?keyword=俄士兵阵亡前留在墙上的遗言曝光)
+1. [地震已造成青海海东14死198伤](https://so.toutiao.com/search?keyword=地震已造成青海海东14死198伤)
+1. [空军运-20抵达甘肃](https://so.toutiao.com/search?keyword=空军运-20抵达甘肃)
+1. [董明珠称年轻人不该以自我为中心](https://so.toutiao.com/search?keyword=董明珠称年轻人不该以自我为中心)
+1. [高校回应宿舍地震时门打不开](https://so.toutiao.com/search?keyword=高校回应宿舍地震时门打不开)
+1. [地震引发青海一村7户19人被埋](https://so.toutiao.com/search?keyword=地震引发青海一村7户19人被埋)
+1. [男生为舍友庆生突发地震跑操场避险](https://so.toutiao.com/search?keyword=男生为舍友庆生突发地震跑操场避险)
+1. [地震已造成甘肃113人死亡](https://so.toutiao.com/search?keyword=地震已造成甘肃113人死亡)
+1. [“70后”女县委书记当选副省长](https://so.toutiao.com/search?keyword=“70后”女县委书记当选副省长)
+1. [积石山县委办回应办公楼地震遭损坏](https://so.toutiao.com/search?keyword=积石山县委办回应办公楼地震遭损坏)
 1. [韩国进口中国辣椒酱创纪录](https://so.toutiao.com/search?keyword=韩国进口中国辣椒酱创纪录)
 1. [兰州男子连夜准备300床被子赴灾区](https://so.toutiao.com/search?keyword=兰州男子连夜准备300床被子赴灾区)
 1. [侵犯哨兵情节严重将处10日以下拘留](https://so.toutiao.com/search?keyword=侵犯哨兵情节严重将处10日以下拘留)
 1. [青海金田村发生山体滑坡20人失联](https://so.toutiao.com/search?keyword=青海金田村发生山体滑坡20人失联)
-1. [地震瞬间烤肉店主大喊客人成功避险](https://so.toutiao.com/search?keyword=地震瞬间烤肉店主大喊客人成功避险)
 1. [学者：年轻人正摒弃“面子”消费](https://so.toutiao.com/search?keyword=学者：年轻人正摒弃“面子”消费)
-1. [俄士兵阵亡前留在墙上的遗言曝光](https://so.toutiao.com/search?keyword=俄士兵阵亡前留在墙上的遗言曝光)
-1. [用户称地震时7部苹果手机均无预警](https://so.toutiao.com/search?keyword=用户称地震时7部苹果手机均无预警)
 1. [伦纳德：哈登的表现堪称神奇](https://so.toutiao.com/search?keyword=伦纳德：哈登的表现堪称神奇)
-1. [王诗龄回京过圣诞 吃400元3个包子](https://so.toutiao.com/search?keyword=王诗龄回京过圣诞+吃400元3个包子)
-1. [鸿星尔克向甘肃捐赠2000万物资](https://so.toutiao.com/search?keyword=鸿星尔克向甘肃捐赠2000万物资)
 1. [武警医护人员救治受伤群众](https://so.toutiao.com/search?keyword=武警医护人员救治受伤群众)
 1. [美女老师进教室被放非诚勿扰bgm](https://so.toutiao.com/search?keyword=美女老师进教室被放非诚勿扰bgm)
-1. [新东方捐款1000万援助甘肃](https://so.toutiao.com/search?keyword=新东方捐款1000万援助甘肃)
 1. [美军要对胡塞武装动手？分析来了](https://so.toutiao.com/search?keyword=美军要对胡塞武装动手？分析来了)
-1. [中方回应菲总统称菲中关系走错方向](https://so.toutiao.com/search?keyword=中方回应菲总统称菲中关系走错方向)
 1. [李家超沉痛哀悼甘肃地震遇难同胞](https://so.toutiao.com/search?keyword=李家超沉痛哀悼甘肃地震遇难同胞)
 1. [高途董事长个人向甘肃灾区捐款百万](https://so.toutiao.com/search?keyword=高途董事长个人向甘肃灾区捐款百万)
 1. [这个肩膀安全感满满](https://so.toutiao.com/search?keyword=这个肩膀安全感满满)
 1. [上千名救援人员挨家挨户地毯式搜救](https://so.toutiao.com/search?keyword=上千名救援人员挨家挨户地毯式搜救)
 1. [地震预报究竟难在哪儿](https://so.toutiao.com/search?keyword=地震预报究竟难在哪儿)
 1. [小卡吹哈登：他的表现令人惊叹](https://so.toutiao.com/search?keyword=小卡吹哈登：他的表现令人惊叹)
-1. [酥饼店连夜做5000个饼支援震区](https://so.toutiao.com/search?keyword=酥饼店连夜做5000个饼支援震区)
 1. [大雪撕下了新能源汽车的遮羞布？](https://so.toutiao.com/search?keyword=大雪撕下了新能源汽车的遮羞布？)
 1. [消防正搜救草滩村7户19名被埋人员](https://so.toutiao.com/search?keyword=消防正搜救草滩村7户19名被埋人员)
 1. [翼龙-2H无人机飞赴甘肃救灾](https://so.toutiao.com/search?keyword=翼龙-2H无人机飞赴甘肃救灾)
@@ -69,7 +90,6 @@
 1. [青海启动自然灾害III级救灾应急响应](https://so.toutiao.com/search?keyword=青海启动自然灾害III级救灾应急响应)
 1. [男子拆快递时意外收到2箱现金](https://so.toutiao.com/search?keyword=男子拆快递时意外收到2箱现金)
 1. [武警官兵紧急搜救转移群众](https://so.toutiao.com/search?keyword=武警官兵紧急搜救转移群众)
-1. [朱丹“被骗”事件始末](https://so.toutiao.com/search?keyword=朱丹“被骗”事件始末)
 1. [甘肃柳沟村：村民篝火取暖一夜未眠](https://so.toutiao.com/search?keyword=甘肃柳沟村：村民篝火取暖一夜未眠)
 1. [震区店主免费为救援人员提供牛肉面](https://so.toutiao.com/search?keyword=震区店主免费为救援人员提供牛肉面)
 1. [地震时如果我们正在睡觉该怎么办](https://so.toutiao.com/search?keyword=地震时如果我们正在睡觉该怎么办)
@@ -80,7 +100,6 @@
 1. [老板们都在热议的数据飞轮是啥](https://so.toutiao.com/search?keyword=老板们都在热议的数据飞轮是啥)
 1. [网友晒在草原牧区的日常生活](https://so.toutiao.com/search?keyword=网友晒在草原牧区的日常生活)
 1. [地震灾区现场企业免费分发牛肉面](https://so.toutiao.com/search?keyword=地震灾区现场企业免费分发牛肉面)
-1. [俄总理抵达北京 中国副外长接机](https://so.toutiao.com/search?keyword=俄总理抵达北京+中国副外长接机)
 1. [为何低温下花生油有的凝固有的澄清](https://so.toutiao.com/search?keyword=为何低温下花生油有的凝固有的澄清)
 1. [鳖盖被压坏男子索赔两万多吓坏司机](https://so.toutiao.com/search?keyword=鳖盖被压坏男子索赔两万多吓坏司机)
 1. [甘肃和新疆两地地震有关联吗](https://so.toutiao.com/search?keyword=甘肃和新疆两地地震有关联吗)
@@ -106,7 +125,6 @@
 1. [直击震后甘肃大河家镇安置点](https://so.toutiao.com/search?keyword=直击震后甘肃大河家镇安置点)
 1. [民调：侯友宜与赖清德的支持度打平](https://so.toutiao.com/search?keyword=民调：侯友宜与赖清德的支持度打平)
 1. [解放军战士在地震灾区搭建流动厨房](https://so.toutiao.com/search?keyword=解放军战士在地震灾区搭建流动厨房)
-1. [苹果CEO库克宣布将捐款驰援甘肃](https://so.toutiao.com/search?keyword=苹果CEO库克宣布将捐款驰援甘肃)
 1. [首批救援物资送抵甘肃大河家镇](https://so.toutiao.com/search?keyword=首批救援物资送抵甘肃大河家镇)
 1. [甘肃地震局：这类信息均系谣言](https://so.toutiao.com/search?keyword=甘肃地震局：这类信息均系谣言)
 1. [多部门介入湘潭恶犬咬人事件](https://so.toutiao.com/search?keyword=多部门介入湘潭恶犬咬人事件)
@@ -145,7 +163,6 @@
 1. [援甘干部组织积石山县震中村民撤离](https://so.toutiao.com/search?keyword=援甘干部组织积石山县震中村民撤离)
 1. [甘肃临夏州公布灾区捐赠咨询电话](https://so.toutiao.com/search?keyword=甘肃临夏州公布灾区捐赠咨询电话)
 1. [乔治：我还记得以前对抗哈登的日子](https://so.toutiao.com/search?keyword=乔治：我还记得以前对抗哈登的日子)
-1. [美宣布3亿美元对台军售 国防部回应](https://so.toutiao.com/search?keyword=美宣布3亿美元对台军售+国防部回应)
 1. [苹果停止在美销售部分Apple Watch](https://so.toutiao.com/search?keyword=苹果停止在美销售部分Apple+Watch)
 1. [外籍母子吞54个藏毒避孕套入境被捕](https://so.toutiao.com/search?keyword=外籍母子吞54个藏毒避孕套入境被捕)
 1. [农夫山泉连夜驰援甘肃地震灾区](https://so.toutiao.com/search?keyword=农夫山泉连夜驰援甘肃地震灾区)
